--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <p class="panel-heading">Depth Chart</p>
 
                             <div class="panel-block">
-                                <div id="depth-chart"></div>
+                                <div id="depth-chart" style="width: 100%"></div>
                             </div>
                         </div>
                     </div>
@@ -166,30 +166,47 @@
                     <div class="column is-narrow">
                         <div class="" style="width: 300px;">
                             <div class="panel sidebar">
-                                <p class="panel-tabs">
-                                    <a v-bind:class="{ 'is-active': orderType=='sell' }"
-                                        v-on:click="orderType='sell'">SELL</a>
-                                    <a v-bind:class="{ 'is-active': orderType=='buy' }"
-                                        v-on:click="orderType='buy'">BUY</a>
-                                </p>
-                                <div class="panel-block">
-                                    <div class="field">
-                                        <p class="control amount coin1">
-                                            <input class="input" type="text" v-model="coin1Amount" placeholder="0.00">
-                                            <span class="coin is-uppercase">
-                                                {{coin1}}
-                                            </span>
-                                        </p>
+                                <div v-bind:class="{ 'is-blur': !wifKey }">
+
+
+                                    <p class="panel-tabs">
+                                        <a v-bind:class="{ 'is-active': orderType=='sell' }"
+                                            v-on:click="orderType='sell'">SELL</a>
+                                        <a v-bind:class="{ 'is-active': orderType=='buy' }"
+                                            v-on:click="orderType='buy'">BUY</a>
+                                    </p>
+                                    <div class="panel-block">
+                                        <div class="field">
+                                            <p class="control amount coin1">
+                                                <input class="input" type="text" v-model.number="coin1Amount"
+                                                    placeholder="0.00">
+                                                <span class="coin is-uppercase">
+                                                    {{coin1}}
+                                                </span>
+                                            </p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="panel-block">
-                                    <div class="field">
-                                        <p class="control amount coin2">
-                                            <input class="input" type="text" v-model="coin2Amount" placeholder="0.00">
-                                            <span class="coin is-uppercase">
-                                                {{coin2}}
-                                            </span>
-                                        </p>
+                                    <div class="panel-block">
+                                        <div class="field">
+                                            <p class="control coin1-coin2-rate">
+                                                <input class="input" type="text" v-model.number="coin1coin2rate"
+                                                    placeholder="0.00">
+                                                <span class="is-uppercase price">
+                                                    price
+                                                </span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="panel-block">
+                                        <div class="field">
+                                            <p class="control amount coin2">
+                                                <input class="input" type="text" v-model.number="coin2Amount"
+                                                    placeholder="0.00">
+                                                <span class="coin is-uppercase">
+                                                    {{coin2}}
+                                                </span>
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="panel-block">
